# piqro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boot_stage2.ld  build.cmd  build.sh  compile_commands.json  compile_flags.txt  main.cpp  run.cmd
docs/: PIQRO.stl  piqro.stl
sdk/: config_def.h  global.h  includes.h  memmap_rp2040_default.ld  sdk_all.c
sdk/_sdk/: asm_include.inc  sdk_addressmap.h
sdk/_sdk/inc/: sdk_cpu.h
src/: main.cpp
src/base/: arena.h  array.h  common.h  free_list.h  log.h  string.h  unicode.h  utf.h  util.h
src/block/: block.cpp  block.h  compiler.h  generator.cpp  generator.h  instruction.h  interp.cpp  interp.h  opcode.h  value.h  vm.cpp  vm.h
src/cli/: main.c  main.cpp  test_bed.pq
src/core/: array.h  core.h
src/hw/: CMakeLists.txt  ili9341.c  ili9341.h  main.c
src/lang/: compiler.cpp  compiler.h  config.h  generator.cpp  generator.h  instruction.h  state.cpp  state.h  token.h  tokenizer.cpp  tokenizer.h  types.h  value.h  vm.cpp  vm.h
src/pq/: compiler.c  compiler.h  config.h  types.h  vm.c  vm.h
src/render/: canvas.h
src/runtime/: canvas.c  canvas.h  config.h  state.c  state.h
src/ui/: gfx.h  gfx_d3d11.cpp  main.cpp  os.h  os_win32.cpp  window.h  window_win32.cpp
src/wasm/: main.cpp  support.h
src/web/: canvas.h  index.cpp  js.h  main.c  support.h  window.h
